correções - conexão sql