@@ -89,6 +89,7 @@ public class UsuariosRepository extends Starter implements _BaseRepository<Usuar
 //    }
 
     public void create(Usuario usuario) {
+        var idEmpresa = new ArrayList<Integer>();
         try (var conn = new OracleDatabaseConfiguration().getConnection()) {
 
             if (usuario instanceof Cliente){
@@ -112,6 +113,18 @@ public class UsuariosRepository extends Starter implements _BaseRepository<Usuar
                 } catch (SQLException e) {
                     logError(e);
                 }
+
+
+                try (var stmt = conn.prepareStatement(
+                        "SELECT * FROM %s WHERE %s = %s"
+                                .formatted(UsuariosRepository.TB_NAME_C, TB_COLUMNS.get("CNPJ"), ((Cliente) usuario).getEmpresa().getCnpj()))){
+                    var resultSet = stmt.executeQuery();
+                    while (resultSet.next()) {
+                        idEmpresa.add(resultSet.getInt(TB_COLUMNS.get("COD_CLIENTE")));
+                    }
+                }catch (SQLException e) {
+                    logError(e);
+                }
             }
 
             try (var stmt = conn.prepareStatement(
@@ -119,8 +132,8 @@ public class UsuariosRepository extends Starter implements _BaseRepository<Usuar
                             .formatted(UsuariosRepository.TB_NAME_U,
                                     TB_COLUMNS.get("NOME_USUARIO"),
                                     TB_COLUMNS.get("SENHA"),
-                                    TB_COLUMNS.get("EMAIL"),
                                     TB_COLUMNS.get("NOME_COMPLETO"),
+                                    TB_COLUMNS.get("EMAIL"),
                                     TB_COLUMNS.get("CPF"),
                                     TB_COLUMNS.get("TELEFONE"),
                                     TB_COLUMNS.get("CARGO"),
@@ -130,8 +143,8 @@ public class UsuariosRepository extends Starter implements _BaseRepository<Usuar
                             ))) {
                 stmt.setString(1, usuario.getNomeUsuario());
                 stmt.setString(2, usuario.getSenha());
-                stmt.setString(3, usuario.getEmail());
-                stmt.setString(4, usuario.getNomeCompleto());
+                stmt.setString(3, usuario.getNomeCompleto());
+                stmt.setString(4, usuario.getEmail());
 
 
                 if (usuario instanceof Administrador) {
@@ -149,7 +162,7 @@ public class UsuariosRepository extends Starter implements _BaseRepository<Usuar
                     stmt.setString(7, ((Cliente) usuario).getCargo());
                     stmt.setString(8, ((Cliente) usuario).getPerguntasOuComentarios());
                     stmt.setInt(9, 2);
-                    stmt.setInt(10, ((Cliente) usuario).getEmpresa().getId());
+                    stmt.setInt(10, idEmpresa.get(0));
                     logInfo("Cliente adicionado com sucesso");
                 }
                 stmt.executeUpdate();
@@ -486,13 +499,13 @@ public class UsuariosRepository extends Starter implements _BaseRepository<Usuar
                     clientes.add(new Cliente(
                             resultSet.getString(TB_COLUMNS.get("NOME_USUARIO")),
                             resultSet.getString(TB_COLUMNS.get("SENHA")),
-                            resultSet.getString(TB_COLUMNS.get("EMAIL")),
                             resultSet.getString(TB_COLUMNS.get("NOME_COMPLETO")),
+                            resultSet.getString(TB_COLUMNS.get("EMAIL")),
                             resultSet.getLong(TB_COLUMNS.get("CPF")),
                             resultSet.getString(TB_COLUMNS.get("TELEFONE")),
                             resultSet.getString(TB_COLUMNS.get("CARGO")),
                             resultSet.getString(TB_COLUMNS.get("PERGUNTAS_COMENTARIOS")),
-                            empresa.getFirst()
+                            empresa.get(0)
                     ));
                 }
             }
